# PyConSolv

./: .gitignore  ConfGen.py  README.md  amber.py  calculate.py  colorgen.py  filestructure.py  inputparser.py  multiWFN.py  outgen.py  pyproject.toml  requirements.txt  requirements.txt_old  restart.py  setup.py  solvenGen.py  solvent.py  ui.py
Manual/: Manual.docx  Manual_v1.0.6.2.docx  Manual_v1.0.6.3.docx
conda/: meta.yaml
db/: atom-radius.txt  metal-radius.txt
interfaces/: amber.py  calculate.py  multiWFN.py
misc/: filestructure.py  inputparser.py  solvenGen.py  solvent.py
solvents/: ACN.mol2  ACT.mol2  CHX.mol2  CL4.mol2  DMF.mol2  DMS.mol2  ETL.mol2  HEX.mol2  MTL.mol2  OCT.mol2  PYR.frcmod  THF.mol2
src/PyConSolv/: ConfGen.py  pyconsolv.py
src/PyConSolv/counterions/: BARF.frcmod  BARF.mol2  BF4.frcmod  BF4.mol2  BPH.frcmod  BPH.mol2  CLO.frcmod  CLO.mol2  OTF.mol2  PF6.frcmod  PF6.mol2  SCF.frcmod  SCF.mol2
src/PyConSolv/db/: atom-radius.txt  metal-radius.txt
src/PyConSolv/interfaces/: amber.py  calculate.py  cpptraj.py  gromacs.py  mdengines.py  multiWFN.py  parmed.py
src/PyConSolv/misc/: Task.py  analysis.py  clustering.py  converter.py  coordinateCheck.py  counterion.py  counterionGen.py  files.py  filestructure.py  fragmenting.py  frcmod.py  inputparser.py  ions.py  mol2.py  outgen.py  parameterChecker.py  parametrizerInterface.py  pathchecker.py  restart.py  solvenGen.py  solvent.py  tleapAdderInterface.py  ui.py
src/PyConSolv/scripts_and_inputs/: align.in  align_dry.in  dry.vmd  dry_aligned.vmd  dry_sim.in  run_simulation.sh  run_simulation_gro.sh  simulation.in  simulation_cart.in  simulation_gro.mdp  simulation_restraint.in  solv.vmd  strip.sh
src/PyConSolv/solvents/: ACN.mol2  BNZ.mol2  CL3.mol2  CL4.mol2  DCM.mol2  DMF.frcmod  NH3.mol2  PYR.mol2  TOL.mol2
src/PyConSolv/utils/: charge.py  colorgen.py  copier.py
tests/: test_amber.py  test_filestructure.py  test_inputparser.py
tests/TestReference/: input.xyz  input.xyz.original
tests/TestReference/MCPB_setup/: B.mol2  B1.mol2  C.mol2  C1.mol2  Connections  D.frcmod  D.mol2  D1.mol2  E.mol2  E1.mol2  LIG_dry.inpcrd  LIG_dry.prmtop  LIG_large.fingerprint  LIG_large_mk.com  LIG_large_mk.inp  LIG_mcpbpy.frcmod  LIG_mcpbpy_pre.frcmod  LIG_small_fc.com  LIG_small_fc.inp  LIG_small_opt.com  LIG_small_opt.inp  LIG_solv.inpcrd  LIG_solv.prmtop  LIG_standard.fingerprint  LIG_tleap.in  MCPB_s1.out  MCPB_s2.out  MCPB_s4.out  PT.mol2  PT1.mol2  antechamber_B.out  filenames.restart  input.in  input.xyz  input_reduced.in  sqm.in  (+2 more)
tests/Testfiles/: input.xyz
(+104 files in other folders)
