[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconsolv"
version = "0.1.3"
authors = [
  { name="R. A. Talmazan", email="radu.talmazan@tuwien.ac.at" },
]
description = "A package for conformer generation of transition-metal-containing complexes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
