[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyConSolv"
version = "0.1.6"
authors = [
  { name="R. A. Talmazan", email="radu.talmazan@tuwien.ac.at" },
]
description = "A package for conformer generation of transition-metal-containing complexes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/PodewitzLab/PyConSolv"
"Bug Tracker" = "https://github.com/PodewitzLab/PyConSolv/issues"
